k8s/itadaki/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itadaki-frontend
  namespace: services
spec:
  type: ClusterIP
  selector:
    app: itadaki-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
